# games

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
borrow_dino/: Cargo.toml  build-wasm.ps1  build-wasm.sh
borrow_dino/src/: background.rs  biome.rs  entities.rs  evolution.rs  game.rs  lib.rs  main.rs
borrow_dino/web/: README.md  index.html
chess/: instructions.md  package-lock.json  package.json
chess/scripts/: fetch_puzzles.ts
chess/src/: App.css  App.tsx  index.css  types.ts
chess/src/components/: ChessGame.tsx
chess/src/data/: puzzles.json
chess/src/utils/: puzzleManager.ts
hotdog-contest/: index.html  instructions.md  package-lock.json  package.json
hotdog-contest/src/: App.css  App.tsx
ice-hockey/: game.js  index.html  main.py  pyproject.toml  styles.css
lagori/: gemini.md  index.html  package-lock.json  package.json
lagori/src/: App.css  App.tsx  types.ts
pinball/: idea.md  index.html  package-lock.json  package.json  readme.md
pinball/src/: main.ts  setup.test.ts
ping_pong/: game.js  index.html  style.css
pool/: Instructions.md  README.md  index.html  package-lock.json  package.json
pool/src/: App.tsx  index.css
rust_game/: Cargo.toml
rust_game/src/: game_logic.rs  main.rs
shooter/: gemini.md  index.html  package-lock.json  package.json
shooter/src/: App.tsx  index.css
unicorn-chase/: game.js  index.html  instructions.md  package-lock.json  package.json
unicorn-chase/src/: App.css  App.jsx  Game.jsx
zombie_pacman/: Cargo.toml
zombie_pacman/src/: entities.rs  game.rs  main.rs  maze.rs
(+13 files in other folders)
