[package]
name = "borrow_dino"
version = "0.1.0"
edition = "2021"
description = "Chrome Dinosaur game with Rust's Borrow Checker mechanic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
macroquad = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
